[project]
name = "pinochle"
version = "0.1.0"
description = "A distributed multi-player Pinochle game."
authors = [
    "Paul Kronenwetter <kronenpj@gmail.com>"
]
license = "GPL3"
readme = "README.md"
python = "^3.6"

[tool.poetry]
name = "pinochle"
version = "0.1.0"
description = "Multi-player, server-based Pinochle game."
authors = ["Paul Kronenwetter <kronenpj@gmail.com>"]
license = "GPL-3.0"
exclude = [ "*.db" ]

[tool.poetry.dependencies]
python = "^3.6"
brython="^3.9"
connexion = {version = "^2.2.0", extras = ["swagger-ui"]}
flask-marshmallow="^0.9.0"
Flask-SQLAlchemy="^2.3.2"
Flask="^1.0.0"
gunicorn="^20.0"
jsonpickle = "^2.0.0"
openapi-spec-validator="0.2.9"
psycopg2-binary="^2.8.0"
python-dateutil = "^2.8.0"
# sqlalchemy made a change at 1.4.0 that broke API tests.
sqlalchemy="<1.4.0"
uuid = "^1.30"
Werkzeug="^0.14.0"
# marshmallow="^2.18.0"
# marshmallow-sqlalchemy="^0.15.0"
# Version 3.x of marshmallow makes incompatible changes.
# I'm not ready to deal with the updates yet.
marshmallow="^2.21.0"
# marshmallow-sqlalchemy 0.24.x requires marshmallow 3.x
marshmallow-sqlalchemy="^0.23.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
bumpversion = "^0.6.0"
eralchemy = "^1.2.10"
mockbrython = "^0.0.3"
pylint = "^2.7.2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-flask = "^1.2.0"
rope = "^0.18.0"
tox = "^3.23.0"
typing = [
    {version = "^3.7", python = "<=3.8.99"},
    {version = "< 3.7", python = "^3.9"},
]
# A little skeptical about this one.
#mutmut = "^2.1.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

