# [project]
# name = "pinochle"
# version = "0.1.0"
# description = "A distributed multi-player Pinochle game."
# authors = ["Paul Kronenwetter <kronenpj@gmail.com>"]
# license = "GPL-3.0"
# readme = "README.md"
# python = "^3.6"
# homepage = "https://gitlab.com/iqpinochle/pinochle"
# repository = "https://gitlab.com/iqpinochle/pinochle"

[tool.poetry]
name = "pinochle"
version = "0.1.0"
description = "Multi-player, server-based Pinochle game."
authors = ["Paul Kronenwetter <kronenpj@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://gitlab.com/iqpinochle/pinochle"
repository = "https://gitlab.com/iqpinochle/pinochle"
exclude = [ "*.db" ]

[tool.poetry.dependencies]
python = "^3.6"
brython="^3.9"
connexion = {version = "^2.7.0", extras = ["swagger-ui"]}
flask-marshmallow="^0.14.0"
Flask-SQLAlchemy="^2.3.2"
Flask="^1.0"
gunicorn = "^20.0.4"
jsonpickle = "^2.0"
marshmallow-sqlalchemy="^0.24.0"
marshmallow="^3.0"
openapi-spec-validator="^0.2.9"
psycopg2-binary="^2.8.0"
python-dateutil = "^2.8.0"
sqlalchemy="^1.3.0"
uuid = "^1.30"
Werkzeug="^1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
black = "^19.10b0"
bumpversion = "^0.6.0"
coverage = {version = "^5.5", extras = ["toml"]}
eralchemy = "^1.2.10"
jedi = "^0.18.0"
mockbrython = "^0.0.3"
pylint = "^2.7.2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-flask = "^1.2.0"
pytest-selenium = "^2.0.1"
rope = "^0.18.0"
tox = {version = "^3.23.0", extras = ["toml"]}
typing = [
    {version = "^3.7", python = "<=3.8.99"},
    {version = "< 3.7", python = "^3.9"},
]
yapf = "^0.31.0"
# A little skeptical about this one.
#mutmut = "^2.1.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", ".tox/**/site-packages" ]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
omit = [
   "**/game_old/**",
   "**/log_decorator.py",
   "**/custom_log.py",
   "**/__version__.py",
   "**/__main__.py"
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = ".coverage.xml"
