[options]
zip_safe = true

[sdist]
formats = zip, xztar

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
source = pinochle
dynamic_context = ${COVERAGE_CONTEXT-none}

[mutmut]
paths_to_mutate = pinochle
tests_dir = tests
runner = python -m hammett

[pylint]
max-line-length = 100

[pylint.messages_control]
disable = C0330, C0326
